8170198: Static Redistributable Module List
Reviewed-by: kcr